# raytracer-in-c

./: CMakeLists.txt  README.md  camera.c  camera.h  canvas.c  canvas.h  cube.c  cube.h  cube_image.c  cylinder.c  cylinder.h  cylinder_image.c  glass_plane_sphere.c  group.c  group.h  hexagon_image.c  intersection.h  light.c  light.h  material.c  material.h  matrix.c  matrix.h  object.c  object.h  pattern.c  pattern.h  plane.c  plane.h  plane_sphere_image.c  ray.c  ray.h  sphere.c  sphere.h  sphere_image.c  transformation.c  transformation.h  tuple.c  tuple.h  util.c  (+3 more)
algorithms/: heap.c  heap.h  list.c  list.h
test/: camera_test.h  cube_test.h  cylinder_test.h  group_test.h  light_test.h  matrix_test.h  pattern_test.h  plane_test.h  ray_test.h  sphere_test.h  tests.c  tests.h  transformation_test.h  tuple_test.h  world_test.h
